--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone: America/Los_Angeles
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: BaucomRobotics # the main title
+title: Baucom Robotics # the main title
 
-tagline: The personal website of Alex Baucom # it will display as the subtitle
+tagline: Blog of various robotics projects and more by Alex Baucom # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  The personal website of Alex Baucom
+  Blog of various robotics projects and more by Alex Baucom
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -94,7 +94,7 @@ theme_mode: dark # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: '/assets/Logo/OnlyIcon.png'
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
