--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: America/Los_Angeles
 
 title: Baucom Robotics # the main title
 
-tagline: Blog of various robotics projects and more by Alex Baucom # it will display as the subtitle
+tagline: Various robotics projects and more from Alex Baucom # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Blog of various robotics projects and more by Alex Baucom
+  Various robotics projects and more from Alex Baucom
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -57,7 +57,7 @@ analytics:
   google:
     id: # fill in your Google Analytics ID
   goatcounter:
-    id: # fill in your GoatCounter ID
+    id: repossess564 # fill in your GoatCounter ID
   umami:
     id: # fill in your Umami ID
     domain: # fill in your Umami domain
@@ -71,7 +71,7 @@ analytics:
 
 # Page views settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: goatcounter # now only supports 'goatcounter'
 
 # Prefer color scheme setting.
 #
