--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -51,9 +51,9 @@ jobs:
           JEKYLL_ENV: "production"
 
       - name: Test site
+        # Removed \-\-disable-external \ to validate external links too
         run: |
           bundle exec htmlproofer _site \
-            \-\-disable-external \
             \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
 
       - name: Upload site artifact
