--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -52,9 +52,10 @@ jobs:
 
       - name: Test site
         # Removed \-\-disable-external \ to validate external links too
-        # Removed \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
         run: |
-          bundle exec htmlproofer _site
+          bundle exec htmlproofer _site \
+            \-\-ignore-urls "/127.0.0.1/,/0.0.0.0/,/localhost/,/linkedin.com/,/fonts.googleapis.com/,/fonts.gstatic.com/,/gc.zgo.at/" \
+            \-\-ignore-status-codes "403,999,0"
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
