--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: America/Los_Angeles
 
 title: Baucom Robotics # the main title
 
-tagline: Various robotics projects and more from Alex Baucom # it will display as the subtitle
+tagline: Robotics and technology projects from Alex Baucom # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Various robotics projects and more from Alex Baucom
+  A personal blog from Alex Baucom documenting various projects with a focus on robotics and technology.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -94,7 +94,7 @@ theme_mode: dark # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: '/assets/Logo/OnlyIcon.png'
+avatar: '/assets/AboutPage/Headshot_cropped.jpg'
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -211,6 +211,7 @@ exclude:
   - purgecss.js
   - "*.config.js"
   - "package*.json"
+  - todo.txt
 
 jekyll-archives:
   enabled: [categories, tags]
