--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://alexbaucom17.github.io"
+# url: "https://alexbaucom17.github.io"
+url: "https://baucomrobotics.com"
 
 github:
   username: alexbaucom17 # change to your GitHub username
@@ -146,7 +147,8 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/baucomrobotics-site2"
+# baseurl: "/baucomrobotics-site2"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
