--- a/_config.yml
+++ b/_config.yml
@@ -216,10 +216,8 @@ exclude:
   - todo.txt
 
 jekyll-archives:
-  enabled: [categories, tags]
+  enabled: [tags]
   layouts:
-    category: category
     tag: tag
   permalinks:
     tag: /tags/:name/
-    category: /categories/:name/
