Try fix build 3

--- a/_config.yml
+++ b/_config.yml
@@ -216,9 +216,10 @@ exclude:
   - todo.txt
 
 jekyll-archives:
-  enabled: [categories, tags]
+  enabled: [tags]
   layouts:
     category: category
     tag: tag
   permalinks:
     tag: /tags/:name/
+    category: /categories/:name/
