--- a/_config.yml
+++ b/_config.yml
@@ -216,7 +216,7 @@ exclude:
   - todo.txt
 
 jekyll-archives:
-  enabled: [tags]
+  enabled: [categories, tags]
   layouts:
     category: category
     tag: tag
